...
        ZStack(alignment: .bottom) {
            TabView(selection: $selectedTab) {
                HomeView()
                    .environmentObject(authManager)
                    .tabItem {
                        Image(systemName: "heart.circle")
                        Text("Home")
                    }
                    .tag(0)
                
                ResourceView()
                    .environmentObject(authManager)
                    .tabItem {
...
