...
                .padding(.top)
                
                // Continue as Guest button
                Button {
                    showGuestAlert = true
                } label: {
                    Text("Continue As Guest")
                        .font(.body.weight(.medium))
                        .foregroundColor(.white)
                        .frame(maxWidth: .infinity)
                        .frame(height: 50)
                        .background(Color.blue)
                        .cornerRadius(8)
...
